# soft-fido2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEBUG_BROWSER_DETECTION.md  DEVELOPMENT.md  EMBEDDED_OPTIMIZATION_PLAN.md  Makefile  README.md  SECURITY.md  SECURITY_AUDIT.md  ZERO_ALLOC_PLAN.md  baseline-e2e-results.txt  baseline-test-results.txt  check-fido-device.sh  cliff.toml  renovate.json5  zig_debug.patch
.ci/: release.sh
.github/: copilot-instructions.md
.github/workflows/: pre-commit.yml  prebuilt.yml  rust.yml
soft-fido2/: Cargo.toml
soft-fido2-crypto/: Cargo.toml
soft-fido2-crypto/src/: ecdh.rs  ecdsa.rs  eddsa.rs  error.rs  lib.rs  pin_protocol.rs
soft-fido2-ctap/: Cargo.toml
soft-fido2-ctap/src/: authenticator.rs  bridge.rs  callbacks.rs  cbor.rs  dispatcher.rs  extensions.rs  lib.rs  pin_token.rs  sec_bytes.rs  status.rs  test_utils.rs  types.rs
soft-fido2-ctap/src/commands/: client_pin.rs  config.rs  credential_management.rs  get_assertion.rs  get_info.rs  get_next_assertion.rs  make_credential.rs  mod.rs  selection.rs
soft-fido2-transport/: Cargo.toml
soft-fido2-transport/src/: channel.rs  ctaphid.rs  error.rs  handler.rs  lib.rs  runner.rs  uhid.rs  usb.rs
soft-fido2-transport/tests/: integration_test.rs
soft-fido2/examples/: authenticator.rs  client.rs  credential_management.rs  credential_management_cli.rs  embedded_minimal.rs  pin_protocol.rs  test_uv_auth.rs  virtual_authenticator.rs  webauthn_flow.rs
soft-fido2/src/: authenticator.rs  client.rs  ctap.rs  error.rs  lib.rs  options.rs  pin.rs  request.rs  response.rs  transport.rs  types.rs  uhid.rs
soft-fido2/src/client/: auth.rs  cbor_helpers.rs  credential_mgmt.rs  mod.rs
soft-fido2/tests/: authenticator_crate_compat_test.rs  builtin_uv_flow_test.rs  credential_from_bytes_test.rs  credential_management_e2e_test.rs  credential_storage_test.rs  e2e_authenticator_crate_test.rs  e2e_webauthn_comprehensive_test.rs  e2e_webauthn_rs_integration_test.rs  e2e_webauthn_test.rs  eddsa_flow_test.rs  integration.rs  nostd_comprehensive_test.rs  transport_e2e_test.rs  webauthn_compliance_test.rs  webauthn_inmemory_test.rs  webauthn_pin_test.rs
soft-fido2/tests/common/: mod.rs
