[workspace]
members = ["soft-fido2", "soft-fido2-crypto", "soft-fido2-ctap", "soft-fido2-transport"]
resolver = "2"


[workspace.package]
version = "0.10.0"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.91"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/pando85/soft-fido2"
readme = "README.md"

[workspace.dependencies]
soft-fido2-crypto = { path = "soft-fido2-crypto", default-features = false, version = "0.10.0" }
soft-fido2-ctap = { path = "soft-fido2-ctap", default-features = false, version = "0.10.0" }
soft-fido2-transport = { path = "soft-fido2-transport", version = "0.10.0" }

# Cryptography (well-audited crates)
p256 = { version = "0.14.0-rc.4", features = ["ecdsa", "ecdh"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.10.0-rc.6"
rand_core = "0.10.0-rc.3"
subtle = "2.6"
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }

# CBOR serialization
cbor4ii = { version = "1.2", features = ["serde1"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
secstr = "0.5"

# Error handling
thiserror = "2.0"

# Utilities
hex = "0.4"
smallvec = { version = "1.13", features = ["serde"] }
spin = "0.10"
lazy_static = "1.5"

# Transport
hidapi = "2.6"

# Platform-specific (Linux UHID)
nix = { version = "0.30", features = ["fs", "ioctl"] }

# Dev dependencies
base64 = "0.22"
serial_test = "3.0"
serde_cbor = "0.11"
ciborium = "0.2"
hex-literal = "1.0"
