[package]
name = "soft-fido2-crypto"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
# Cryptography
p256.workspace = true
sha2.workspace = true
hmac.workspace = true
hkdf.workspace = true
aes.workspace = true
cbc.workspace = true
rand.workspace = true
subtle.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
