[package]
name = "soft-fido2-ctap"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# Internal dependencies
soft-fido2-crypto = { path = "../soft-fido2-crypto", default-features = false }
soft-fido2-transport = { path = "../soft-fido2-transport", optional = true }

# CBOR serialization
cbor4ii.workspace = true
serde.workspace = true
serde_bytes.workspace = true

# Crypto utilities
sha2.workspace = true
subtle.workspace = true
rand.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
soft-fido2-transport = { path = "../soft-fido2-transport" }

[features]
default = ["std"]
std = ["soft-fido2-crypto/std"]
transport = ["dep:soft-fido2-transport", "std"]
