[package]
name = "soft-fido2-ctap"
description = "CTAP 2.0/2.1 protocol implementation for the soft-fido2 FIDO2/WebAuthn authenticator"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
soft-fido2-crypto.workspace = true
soft-fido2-transport = { workspace = true, optional = true }

# CBOR serialization
cbor4ii.workspace = true
serde.workspace = true
serde_bytes.workspace = true

# Crypto utilities
sha2.workspace = true
subtle.workspace = true
rand.workspace = true

# Error handling (optional for std only)
thiserror = { workspace = true, optional = true }

# Utilities
smallvec.workspace = true

# no_std support
core2 = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex.workspace = true
soft-fido2-transport = { path = "../soft-fido2-transport" }

[features]
default = ["std"]
std = ["soft-fido2-crypto/std", "dep:thiserror", "cbor4ii/use_std"]
transport = ["dep:soft-fido2-transport", "std"]
